# nRF52840_DK

./: README.md
01_hello_zephyr/: CMakeLists.txt  prj.conf
01_hello_zephyr/src/: main.c
02_blinky_led/: CMakeLists.txt
02_blinky_led/src/: main.c
03_sysinit_driver/: .gitignore  CMakeLists.txt
03_sysinit_driver/bsp/inc/: bsp_led.h
03_sysinit_driver/bsp/src/: bsp_led.c
03_sysinit_driver/build_1/: .ninja_log  03_sysinit_driver_sysbuild_cache.txt.tmp  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  merged.hex  zephyr_modules.txt
03_sysinit_driver/build_1/03_sysinit_driver/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  sysbuild_modules.txt  zephyr_settings.txt
03_sysinit_driver/build_1/03_sysinit_driver/Kconfig/: Kconfig.sysbuild.modules
03_sysinit_driver/build_1/03_sysinit_driver/zephyr/: .cmake.dotconfig.checksum  .config  edt.pickle  (+19 more)
03_sysinit_driver/build_1/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig  kconfig_module_dirs.cmake
03_sysinit_driver/build_1/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.pickle
03_sysinit_driver/src/: main.c
04_button_interrupt/: CMakeLists.txt  app.overlay
04_button_interrupt/bsp/inc/: bsp_led.h
04_button_interrupt/bsp/src/: bsp_button.c  bsp_led.c
05_pwm_led_dimming/: .gitignore  app.overlay  prj.conf
05_pwm_led_dimming/bsp/inc/: bsp_led.h
05_pwm_led_dimming/bsp/src/: bsp_led.c
05_pwm_led_dimming/src/: main.c
06_uart_msgq/: CMakeLists.txt  prj.conf
07_watchdog_wdg/: CMakeLists.txt  app.overlay  prj.conf
07_watchdog_wdg/src/app/src/: app_uart.c  app_watchdog.c
07_watchdog_wdg/src/bsp/inc/: bsp_led.h
07_watchdog_wdg/src/bsp/src/: bsp_led.c
08_battery_adc/: CMakeLists.txt  app.overlay  prj.conf
08_battery_adc/src/app/inc/: app_watchdog.h
08_battery_adc/src/app/src/: app_battery.c  app_uart.c  main.c
08_battery_adc/src/bsp/inc/: bsp_battery.h
08_battery_adc/src/bsp/src/: bsp_battery.c
09_low_power_pm/: CMakeLists.txt  prj.conf
100_protocol/: nRF52840 DK_UART_protocol_R00.docx
(+192 files in other folders)
